separate profile for json logging